tooling/nargo_cli/tests/snapshots/execution_success/conditional_regression_short_circuit/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32, v1: [u32; 4], v3: [u8; 5], v4: [u8; 32]):
    v2 = allocate -> &mut [u32; 4]
    store v1 at v2
    (no terminator instruction)
}
